Updating to latest FlutterFlow output.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,9 +53,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
-
+	<key>NSCameraUsageDescription</key>
+    <string>In order to take a picture or video, this app requires permission to access the camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-    <string>SAexp invite you to </string>
+    <string>In order to upload data, this app requires permission to access the photo library.</string>
+
 
     <key>LSApplicationQueriesSchemes</key>
     <array>
