--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   collection: 1.18.0
   data_table_2: 2.5.10
   expandable: 5.0.1
+  file_picker: 6.1.1
   firebase_core: 2.26.0
   firebase_core_platform_interface: 5.0.0
   firebase_core_web: 2.11.5
@@ -40,6 +41,9 @@ dependencies:
   firebase_performance_web: 0.1.4+24
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
+  flutter_html: 3.0.0-alpha.5
+  flutter_keyboard_visibility: ^5.4.0
+  flutter_plugin_android_lifecycle: 2.0.17
   flutter_rating_bar: 4.0.1
   flutter_staggered_grid_view: 0.7.0
   font_awesome_flutter: 10.6.0
@@ -50,11 +54,18 @@ dependencies:
   google_generative_ai: 0.1.0
   gotrue: 1.12.6
   hive: 2.2.3
+  html_editor_enhanced: ^2.5.1
+  image_picker: 1.0.4
+  image_picker_android: 0.8.8
+  image_picker_for_web: 3.0.1
+  image_picker_ios: 0.8.8+2
+  image_picker_platform_interface: 2.9.1
   intl: 0.18.1
   json_path: 0.6.2
   lottie: 2.7.0
   map_launcher: 2.5.0+1
   mask_text_input_formatter: 2.4.0
+  mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.0.14
   path_provider_android: 2.0.25
@@ -84,6 +95,11 @@ dependencies:
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
+  video_player: 2.8.1
+  video_player_android: 2.4.10
+  video_player_avfoundation: 2.5.1
+  video_player_platform_interface: 6.2.1
+  video_player_web: 2.1.2
   webview_flutter: 4.7.0
   webview_flutter_android: 3.15.0
   webview_flutter_platform_interface: 2.10.0
@@ -95,16 +111,29 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dependency_overrides:
+  file_picker: 6.1.1
   http: 1.2.0
   rxdart: 0.27.7
   uuid: ^4.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 3.0.0
+  image: 4.0.17
   lints: 3.0.0
 
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
